# UniversalPromptStudio

./: .gitattributes  .gitignore  COPYRIGHT  LICENSE  NOTICE  README.md  pyproject.toml
Backend/: __init__.py
Backend/application/: __init__.py  prompt_builder.py  services.py
Backend/core/: container.py  events.py  registry.py
Backend/domain/: __init__.py  models.py
Backend/implementations/: __init__.py  dummy.py
Backend/infrastructure/: __init__.py
Backend/infrastructure/repositories/: in_memory.py  sqlite.py
Backend/infrastructure/search/: __init__.py  whoosh_search.py
Backend/interfaces/: __init__.py  providers.py
Backend/repositories/: __init__.py  contracts.py
Categories/: default_categories.md
Docs/: 020_CONFIGURATION.md  023_SECURITY.md  024_PERFORMANCE.md  028_RELEASE_PROCESS.md  030_NAMING_CONVENTIONS.md  034_KNOWN_LIMITATIONS.md  API_CONTRACTS.md  CODING_STANDARDS.md  DEVELOPER_ONBOARDING.md
Docs/00_Project/: DECISION_LOG.md  PROJECT_VISION.md
Docs/01_Architecture/: ARCHITECTURE.md  DEPENDENCY_INJECTION.md  EVENT_SYSTEM.md  FOLDER_STRUCTURE.md  PROVIDER_REGISTRY.md  README.md  SYSTEM_REQUIREMENTS.md
Docs/02_Domain/: DOMAIN_MODEL.md
Docs/03_Database/: DATABASE_OVERVIEW.md  DATABASE_SCHEMA.md
Docs/04_Backend/: INTERFACES.md  PROMPT_ENGINE.md  PROMPT_OPTIMIZATION.md  PROMPT_VALIDATION.md  SEARCH_ENGINE.md  TEMPLATE_ENGINE.md  WORKFLOW_ENGINE.md
Docs/05_Frontend/: UI_ARCHITECTURE.md
Docs/06_SDKs/: AI_PROVIDER_SDK.md  EXPORT_SDK.md  IMPORT_SDK.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SDK.md  THEME_SDK.md
Docs/07_Development/: BUILD_SYSTEM.md  CODING_PATTERNS.md  ERROR_HANDLING.md  GIT_WORKFLOW.md
Docs/08_Testing/: LOGGING.md  TESTING_STRATEGY.md
Docs/09_Roadmap/: CHANGELOG.md  FEATURE_BACKLOG.md  PHASE_ROADMAP.md
Engineering/: __init__.py  __main__.py
Engineering/cli/: __init__.py
Engineering/core/: __init__.py  constants.py  paths.py  version.py
Frontend/: package.json
Frontend/src/: main.js  styles.css
Frontend/src-tauri/: tauri.conf.json
Scripts/: check.ps1
Tests/: test_container.py  test_prompt_builder.py  test_registry_and_execution.py  test_search.py  test_services.py  test_sqlite_repositories.py
