[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-prompt-studio"
version = "0.1.0"
description = "Offline, AI-agnostic desktop application for prompt engineering."
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy>=2.0",
  "whoosh>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "isort>=5.13",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["Backend*"]
exclude = [
  "Assets*",
  "Categories*",
  "Database*",
  "Docs*",
  "Frontend*",
  "Plugins*",
  "Scripts*",
  "Templates*",
  "Tests*",
  "Themes*",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["whoosh.*"]
ignore_missing_imports = true
